# CrateNav

./: .env.example  .gitignore  Cargo.toml  README-zh.md  README.md  build.rs  start.bat  start_with_check.bat  test_db_connection.rs
.sqlx/: query-6880e316e7056a286e2140ce4be5c496e87917b1b94b64860c89259b9d7b0236.json  query-960def5c8bce68a47c1789b662727457e15122db559d397e0ca7a4a57532018a.json  query-9cd3c4958ddbe56f33b7bd689b220baa9107ad2e82c98922ab0088e4a0dacf33.json
db_test/: Cargo.toml  simple_db_test.rs
migrations/: 001_init.sql
minimal_server/: Cargo.toml  minimal_server.rs
src/: app.rs  db.rs  handlers.rs  import_export.rs  lib.rs  main.rs  models.rs
