[package]
name = "pintree-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "time"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
leptos = { version = "0.6.15", features = ["nightly"] }
leptos_meta = { version = "0.6.15", features = ["nightly"] }
leptos_router = { version = "0.6.15", features = ["nightly"] }
leptos_axum = { version = "0.6.15" }
console_error_panic_hook = "0.1"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
axum-extra = { version = "0.9", features = ["cookie"] }
thiserror = "1.0"
anyhow = "1.0"
validator = { version = "0.18", features = ["derive"] }
bcrypt = "0.15"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
url = "2.5"
cached = { version = "0.46", features = ["proc_macro"] }
leptos-use = "0.14.0"
image = "0.24"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
ssr = []

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[[bin]]
name = "test_db_connection"
path = "test_db_connection.rs"