[package]
name = "db-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple_db_test"
path = "simple_db_test.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
dotenv = "0.15"