[package]
name = "minimal-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "minimal_server"
path = "minimal_server.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
dotenv = "0.15"